:iphone: Fix a button layout on tablet - SHU-219

--- a/src/styles/Works.module.scss
+++ b/src/styles/Works.module.scss
@@ -192,6 +192,9 @@
       @include m.mq(sp) {
         margin: 0 auto;
       }
+      @include m.mq(tab) {
+        margin: 0 auto;
+      }
       @include m.mq(pc) {
         order: 2;
       }
@@ -205,6 +208,9 @@
 
     &:not(:first-child) {
       @include m.mq(sp) {
+        margin: 10% auto 0;
+      }
+      @include m.mq(tab) {
         margin: 10% auto 0;
       }
     }
